--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+
+*{font-family: 'Black Han Sans', sans-serif;}
