--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
 
-.html{font-family: 'Black Han Sans', sans-serif;}
+.div{font-family: 'Black Han Sans', sans-serif;}
 
 
 .link {
